Nginx/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-ingress
spec:
  podSelector:
    matchLabels:
      role: nginx
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: nginx-ingress
